--- a/Practice/transformer_in_pytorch.ipynb
+++ b/Practice/transformer_in_pytorch.ipynb
@@ -43,6 +43,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "implementing transformer architecture\n",
+    "<p align=\"center\">\n",
+    "<img height=\"400\" src=\"../image.png\" >  \n",
+    "</p>\n",
+    "<p align=\"center\">\n",
+    "Picture：Transformer architecture\n",
+    "</p> "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
