--- a/Practice/transformer_in_pytorch.ipynb
+++ b/Practice/transformer_in_pytorch.ipynb
@@ -46,9 +46,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "implementing transformer architecture\n",
+    "### Implementing transformer architecture\n",
     "<p align=\"center\">\n",
-    "<img height=\"400\" src=\"../image.png\" >  \n",
+    "<img height=\"300\" src=\"../image.png\" >  \n",
     "</p>\n",
     "<p align=\"center\">\n",
     "Picture：Transformer architecture\n",
