--- a/Practice/transformer_in_pytorch.ipynb
+++ b/Practice/transformer_in_pytorch.ipynb
@@ -46,13 +46,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Implementing transformer architecture\n",
-    "<p align=\"center\">\n",
-    "<img height=\"300\" src=\"../image.png\" >  \n",
-    "</p>\n",
-    "<p align=\"center\">\n",
-    "Picture：Transformer architecture\n",
-    "</p> "
+    "## Implementing transformer architecture\n",
+    "<div align=\"center\">\n",
+    "  <img src=\"../image.png\" alt=\"Transformer architecture\" style=\"height:350px;\">\n",
+    "  <p>Picture：Transformer architecture</p>\n",
+    "</div>\n"
    ]
   },
   {
