--- a/Practice/transformer_in_pytorch.ipynb
+++ b/Practice/transformer_in_pytorch.ipynb
@@ -49,8 +49,10 @@
     "## Implementing transformer architecture\n",
     "<div align=\"center\">\n",
     "  <img src=\"../image.png\" alt=\"Transformer architecture\" style=\"height:350px;\">\n",
-    "  <p>Picture：Transformer architecture</p>\n",
-    "</div>\n"
+    "</div>\n",
+    "<p align=\"center\">\n",
+    "Picture：Transformer architecture\n",
+    "</p>"
    ]
   },
   {
