--- a/Practice/transformer_in_pytorch.ipynb
+++ b/Practice/transformer_in_pytorch.ipynb
@@ -47,11 +47,11 @@
    "metadata": {},
    "source": [
     "## Implementing transformer architecture\n",
-    "<div align=\"center\">\n",
+    "<div>\n",
     "  <img src=\"../image.png\" alt=\"Transformer architecture\" style=\"height:350px;\">\n",
     "</div>\n",
     "\n",
-    "<p align=\"center\">\n",
+    "<p>\n",
     "Picture：Transformer architecture\n",
     "</p>"
    ]
