--- a/Practice/dot_product_qkv.ipynb
+++ b/Practice/dot_product_qkv.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "## Scaled Dot-Product Attention\n",
-    "來透過實際復刻Scaled Dot-Product Attention來更熟悉注意力(Attention)機制\n",
+    "透過實際復刻Scaled Dot-Product Attention來更熟悉注意力(Attention)機制\n",
+    "\n",
     "<img height=\"300\" src=\"./Scaled_Dot-Product_Attention.png\" >  "
    ]
   },
@@ -14,7 +15,7 @@
    "metadata": {},
    "source": [
     "這個架構可以分成以下幾點：\n",
-    "1. 定義QKV的來源\n",
+    "1. 定義QKV的來源，我們使用Word2Vec獲得\n",
     "2. MatMul (點積) 計算\n",
     "3. Scale (縮放)\n",
     "4. Mask (選擇性) 的用途\n",
@@ -68,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "這個模型會將自然語言轉成一個300維的向量"
+    "這個模型會將自然語言的詞轉成一個300維的向量"
    ]
   },
   {
@@ -84,18 +85,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 簡單的詞嵌入函數\n",
+    "# 進行word embedding\n",
     "def word_embedding(word, model):\n",
     "    try:\n",
-    "        return model[word]  # 嘗試從模型中獲取詞嵌入\n",
+    "        return model[word]  # 嘗試從模型中獲取word embedding\n",
     "    except KeyError:\n",
-    "        # 如果詞語不在詞嵌入模型的詞彙中，返回一個隨機向量\n",
+    "        # 如果詞語不在模型的資料庫中，返回一個隨機向量\n",
     "        return np.random.randn(model.vector_size)  # 返回隨機向量，避免程式錯誤\n",
     "\n",
     "# SoftMax 函數\n",
     "def softmax(x):\n",
     "    exp_x = np.exp(x - np.max(x))  # 減去最大值避免溢出\n",
-    "    return exp_x / exp_x.sum(axis=-1, keepdims=True)  # 計算SoftMax並確保輸出形狀正確\n",
+    "    return np.exp(x - np.max(x)) / exp_x.sum(axis=-1, keepdims=True)  # 計算SoftMax並確保輸出形狀正確\n",
     "\n",
     "\n",
     "#########       TODO: 實現 Scaled Dot-Product Attention 函數      #########\n",
@@ -111,6 +112,9 @@
     "    return output, attention_weights # 返回輸出和注意力權重\n",
     "\n",
     "#########                        END TODO                        #########\n",
+    "\n",
+    "\n",
+    "\n",
     "sentence_1 = \"the cat sat on the mat\"\n",
     "sentence_2 = \"dogs are playing in the park\"\n",
     "\n",
@@ -119,12 +123,12 @@
     "words_2 = sentence_2.split()\n",
     "\n",
     "# 將詞語轉換為embedding向量\n",
-    "Q = np.array([word_embedding(word, model) for word in words_1])  # 生成Query向量\n",
-    "K = np.array([word_embedding(word, model) for word in words_2])  # 生成Key向量\n",
-    "V = np.array([word_embedding(word, model) for word in words_2])  # 生成Value向量\n",
+    "Q = np.array([word_embedding(word, model) for word in words_1])\n",
+    "K = np.array([word_embedding(word, model) for word in words_2])\n",
+    "V = np.array([word_embedding(word, model) for word in words_2])\n",
     "\n",
     "# 計算attention機制的輸出和權重\n",
-    "output, attention_weights = scaled_dot_product_attention(Q, K, V)  # 計算注意力輸出和權重\n",
+    "output, attention_weights = scaled_dot_product_attention(Q, K, V)\n",
     "\n",
     "# 視覺化attention權重\n",
     "def plot_attention_weights(attention_weights, sentence_1, sentence_2):\n",
@@ -154,9 +158,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## FAQ\n",
-    "Q : 為甚麼KV 要用同一個向量代表  \n",
-    "A : "
+    "## 解釋\n",
+    "圖片中可以表示出\"the cat sat on the mat\" 和 \"dogs are playing in the park\"之間的注意力權重，其中：\n",
+    "1. 權重越高，表示Query詞對該Key詞的關注度越高。\n",
+    "2. 權重越低，表示Query詞對該Key詞的關注度越低。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"cat\"對應於\"dogs\"的注意力權重為0.21，是所有權重中最高的。這表示模型認為\"cat\"在處理時應該特別關注\"dogs\"這個詞，可能因為它們都是動物，有較高的語義相關性。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`ToDo`完成後，可以將句子換成不同內容，更加了解注意力機制在處理句子時動態地為每個Query詞分配不同的權重這件事，例如\"cat\"對應於\"dogs\"的高權重，顯示出它們之間的高關聯性，代表模型認為在理解\"cat\"時，\"dogs\"是重要的上下文信息。\n",
+    "\n",
+    "這也是Transformer架構的核心概念，也是現在生成式模型可以透過自然語言處理的重要訓練架構設計。"
    ]
   }
  ],
